# try-gpu-rel

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
notes/: 2026-07-19.md
triton-tutorials/fused-softmax/: fused_softmax.ipynb  torch_try.ipynb
triton-tutorials/vector-addition/: benchmark.py  kernel.py  main.py
vector-addition/: const.py  main.py
