[project]
name = "try-gpu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "torch>=2.13.0",
    "triton>=3.7.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.1",
    "ruff>=0.15.22",
]
