[project]
name = "try-gpu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "torch>=2.13.0",
    "triton>=3.7.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "jedi-language-server>=0.47.0",
    "jupyterlab>=4.6.1",
    "jupyterlab-lsp>=5.3.0",
    "matplotlib>=3.11.1",
    "pyrefly>=1.1.1",
    "pyright>=1.1.411",
    "python-lsp-server>=1.14.0",
    "ruff>=0.15.22",
]
